Fixed: File input layout bug in Safari

--- a/www/comps/inputFiles.css
+++ b/www/comps/inputFiles.css
@@ -1,5 +1,4 @@
 .input-files{
-	height:100%;
 	min-height:280px;
 	display:flex;
 	flex-flow:column nowrap;
